@@ -1,3 +1,5 @@
+Changes from FRESA.CAD 3.4.6 to FRESA.CAD version 3.4.7
+	-ILLA Bootstraping bug corrected
 Changes from FRESA.CAD 3.4.5 to FRESA.CAD version 3.4.6
 	-Update to RRPlots and IDeA algorithms
 	-Added ILAA a IDeA with a simpler interface
